feat: Add empty layout
The layout is built on three parts
 - left and right are for growing
 - mid one is for the content

Add layout info to README

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,18 @@ body {
   font-size: 18px;
   font-family: "Roboto", sans-serif;
 }
+
+/* layout */
+
+.layout {
+  background-color: lightblue;
+  display: flex;
+}
+.empty {
+  flex: 1;
+  background-color: lightpink;
+}
+.content {
+  width: 1200px;
+  background-color: lightsalmon;
+}
