--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
   flex: 1;
 }
 .content {
-  width: 1200px;
+  width: 1000px;
 }
 
 /* header */
@@ -46,5 +46,52 @@ nav {
   gap: 24px;
   color: #e5e7eb;
   font-size: 18px;
+  font-weight: 300;
   list-style-type: none;
+}
+
+/* hero-text */
+
+.hero {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.hero-content {
+  height: 220px;
+  display: flex;
+  justify-content: space-between;
+  align-items: space-between;
+  gap: 50px;
+}
+.left-side {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.left-side h1 {
+  color: #f9faf8;
+  font-size: 48px;
+  font-weight: 900;
+}
+.left-side p {
+  color: #e5e7eb;
+  font-size: 18px;
+  font-weight: 300;
+}
+.left-side button {
+  padding: 8px 30px;
+  border-radius: 12px;
+  color: #f9faf8;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: #3882f6;
+  border: none;
+  align-self: flex-start;
+}
+.right-side {
+  flex: 1;
+  background-color: #ffffff7c;
 }
