--- a/css/style.css
+++ b/css/style.css
@@ -220,3 +220,13 @@ nav {
   font-weight: bold;
   background-color: transparent;
 }
+
+/* footer */
+
+.footer {
+  color: #e5e7eb;
+  font-weight: 300;
+  background-color: #1f2937;
+  padding: 30px 0;
+  text-align: center;
+}
